# carbon-copy

./: .gitignore  CMakeLists.txt  Makefile  README.md
collect/: CMakeLists.txt  Makefile
collect/include/: collect.h  collect_impl.h  utilities_clang.h
collect/scripts/: code-carbon-collect-g++-wrapper  code-carbon-collect-gcc-wrapper
collect/src/: TypeNodes.def  carbon_collect.cpp  collect.cpp  utilities_clang.cpp
extract/: CMakeLists.txt  Makefile
extract/include/: code_reader.h  collection.h  collection_impl.h  graphviz.h  graphviz_impl.h  link.h  reachable.h  read_collection.h  static.h  toposort.h
extract/src/: carbon_extract.cpp  code_reader.cpp  collection.cpp  graphviz.cpp  link.cpp  reachable.cpp  read_collection.cpp  static.cpp  toposort.cpp
